<resources>
    <string name="app_name">FlappyBird</string>
    <string name="flappy_bird">FLAPPY BIRD</string>
    <string name="rate">RATE</string>
    <string name="exit">EXIT</string>
    <string name="todo">TODO</string>
    <string name="_7">7</string>
    <string name="best">Best</string>
    <string name="score">Score</string>
    <string name="game_over">GAME OVER</string>
    <string name="restart">RESTART</string>
    <string name="more">More::</string>
</resources>