<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/flappy_bird"
        android:textAlignment="center"
        android:textColor="#33691E"
        android:textSize="@dimen/FlappySize" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_below="@id/tvName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/red" />

    <ImageButton
        android:id="@+id/imageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/playbtn"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageBtn"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:backgroundTint="@color/gray"
        android:text="@string/rate"
        android:textSize="@dimen/FlappySize"
        android:fontFamily="@font/fredoka_one"
        android:layout_marginTop="@dimen/marginTop"

        android:textColor="@color/myColor"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        android:backgroundTint="@color/cardview_dark_background"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="@dimen/FlappySize" />

</RelativeLayout>