<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GameOverActivity">

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:id="@+id/layoutLen"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/marginTop1"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/bestDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/_7"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/best"
                    android:textSize="@dimen/FlappyTextSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/scoreDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/_7"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/score"
                    android:textSize="@dimen/FlappyTextSize" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="250dp"
        android:layout_below="@id/relative1"
        android:layout_marginTop="@dimen/marginTop">

        <TextView
            android:id="@+id/gameOver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/game_over"
            android:textColor="@color/yellow"
            android:textSize="@dimen/FlappySize" />

        <Button
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gameOver"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/marginTop"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/restart"
            android:textColor="@color/white"
            android:textSize="@dimen/FlappyTextSize" />

        <Button
            android:id="@+id/More"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restart"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/more"
            android:textColor="@color/white"
            android:textSize="@dimen/FlappyTextSize" />


    </RelativeLayout>
</RelativeLayout>